Refactoring to automate index pages.

--- a/overviews/core/_posts/2010-11-30-actors.md
+++ b/overviews/core/_posts/2010-11-30-actors.md
@@ -1,6 +1,8 @@
 ---
 layout: overview
 title: The Scala Actors API
+label-color: success
+label-text: Available
 ---
 
 **Philipp Haller and Stephen Tu**
