Localized Overview index page

--- a/overviews/core/_posts/2012-10-8-macros.md
+++ b/overviews/core/_posts/2012-10-8-macros.md
@@ -4,6 +4,7 @@ title: Macros
 label-color: success
 label-text: New in 2.10
 hidden: true
+overview: macro
 ---
 
 This document is in progress and will be ready in a few days.
