--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -3,6 +3,7 @@ layout: overview
 title: Futures and Promises
 label-color: success
 label-text: New in 2.10
+overview: futures
 ---
 
 **By: Philipp Haller, Aleksandar Prokopec, Heather Miller, Viktor Klang, Roland Kuhn, and Vojin Jovanovic**
