--- a/overviews/core/_posts/2012-12-20-macros.md
+++ b/overviews/core/_posts/2012-12-20-macros.md
@@ -4,6 +4,6 @@ title: Macros
 disqus: true
 partof: macros
 overview: macros
-label-color: warning
+label-color: important
 label-text: Experimental
 ---
