--- a/overviews/core/_posts/2010-11-30-actors.md
+++ b/overviews/core/_posts/2010-11-30-actors.md
@@ -160,10 +160,7 @@ The `Actor` trait extends `ReplyReactor` and adds or overrides the following mem
 
 - The added `receive` method behaves like `react` except that it may
   return a result. This is reflected in its type, which is polymorphic
-  in its result:
-
-    def receive[R](f: PartialFunction[Any, R]): R
-
+  in its result: `def receive[R](f: PartialFunction[Any, R]): R`.
   However, using `receive` makes the actor more heavyweight, since
   `receive` blocks the underlying thread while the actor is suspended
   waiting for a message. The blocked thread is unavailable to execute
