Fix spelling errors.

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -122,12 +122,12 @@ the computation consists of sending a network request and waiting
 for a response.
 It is fair to offer an example involving an asynchronous computation
 which you can try out of the box. Assume you have a text file and
-you want to find the position of the first occurence of a particular keyword.
+you want to find the position of the first occurrence of a particular keyword.
 This computation may involve blocking while the file contents
 are being retrieved from the disk, so it makes sense to perform it
 concurrently with the rest of the computation.
 
-    val firstOccurence: Future[Int] = future {
+    val firstOccurrence: Future[Int] = future {
       val source = scala.io.Source.fromFile("myText.txt")
       source.toSeq.indexOfSlice("myKeyword")
     }
@@ -230,19 +230,19 @@ callback is never triggered:
     }
 
 Coming back to the previous example with searching for the first
-occurence of a keyword, you might want to print the position
+occurrence of a keyword, you might want to print the position
 of the keyword to the screen:
 
-    val firstOccurence: Future[Int] = future {
+    val firstOccurrence: Future[Int] = future {
       val source = scala.io.Source.fromFile("myText.txt")
       source.toSeq.indexOfSlice("myKeyword")
     }
 
-    firstOccurence onSuccess {
+    firstOccurrence onSuccess {
       case idx => println("The keyword first appears at position: " + idx)
     }
 
-    firstOccurence onFailure {
+    firstOccurrence onFailure {
       case t => println("Could not process file: " + t.getMessage)
     }
 
@@ -701,7 +701,7 @@ However, futures can also be created using *promises*.
 
 While futures are defined as a type of read-only placeholder object
 created for a result which doesn't yet exist, a promise can be thought
-of as a writeable, single-assignment container, which completes a
+of as a writable, single-assignment container, which completes a
 future. That is, a promise can be used to successfully complete a
 future with a value (by "completing" the promise) using the `success`
 method. Conversely, a promise can also be used to complete a future
