Change future tense to present since Scala 2.10 is current now.

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -852,9 +852,9 @@ for library writers
 ## Utilities
 
 To simplify handling of time in concurrent applications `scala.concurrent`
- will introduce a `Duration` abstraction. `Duration` is not supposed be yet another
+ introduces a `Duration` abstraction. `Duration` is not supposed be yet another
  general time abstraction. It is meant to be used with concurrency libraries and
- will reside in `scala.concurrent` package.
+ resides in `scala.concurrent` package.
 
 `Duration` is the base class representing length of time. It can be either finite or infinite.
  Finite duration is represented with `FiniteDuration` class which is constructed from `Long` length and
