Add mention of computation return type in intro to Future.

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -66,6 +66,7 @@ computation, and then returns a future object which will be completed
 with the result of that computation.
 
 This is best shown through an example.
+
 Let's assume that we want to use a hypothetical API of some
 popular social network to obtain a list of friends for a given user.
 We will open a new session and then send
@@ -85,7 +86,7 @@ We will explain the second import shortly.
 
 We then initialize a session variable which we will use to send
 requests to the server, using a hypothetical `createSessionFor`
-method.
+method that returns `List[Friend]`.
 To obtain the list of friends of a user, a request
 has to be sent over a network, which can take a long time.
 This is illustrated with the call to the method `getFriends`.
