Correct implementation of first(f, g) and add clarification.

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -823,22 +823,24 @@ you can implement any of the functional composition combinators described earlie
 Let's assume you want to implement a new combinator `first` which takes
 two futures `f` and `g` and produces a third future which is completed by either
 `f` or `g` (whichever comes first), but only given that it is successful.
+
 Here is an example of how to do it:
 
     def first[T](f: Future[T], g: Future[T]): Future[T] = {
       val p = promise[T]
 
       f onSuccess {
-        case x => p.tryComplete(x)
+        case x => p.trySuccess(x)
       }
 
       g onSuccess {
-        case x => p.tryComplete(x)
+        case x => p.trySuccess(x)
       }
 
       p.future
     }
 
+Note that in this implementation, if neither `f` nor `g` succeeds, then `first(f, g)` never completes (either with a value or with an exception).
 
 <!--
 ## Migration p
