--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -41,14 +41,13 @@ environment to resize itself if necessary to guarantee progress.
 A `Future` is an object holding a value which may become available at some point.
 This value is usually the result of some other computation:
 
-- If the computation has not yet completed, we say that the `Future` is **not completed.**
-- If the computation has completed with a value or with an exception, we say that the `Future` is **completed**.
+1. If the computation has not yet completed, we say that the `Future` is **not completed.**
+2. If the computation has completed with a value or with an exception, we say that the `Future` is **completed**.
 
 Completion can take one of two forms:
 
-- When a `Future` is completed with a value, we say that the future
-was **successfully completed** with that value.
-- When a `Future` is completed with an exception thrown by the computation, we say that the `Future` was **failed** with that exception.
+1. When a `Future` is completed with a value, we say that the future was **successfully completed** with that value.
+2. When a `Future` is completed with an exception thrown by the computation, we say that the `Future` was **failed** with that exception.
 
 A `Future` has an important property that it may only be assigned
 once.
