Fix "irregardless" to "regardless".

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -542,7 +542,7 @@ the case it fails to obtain the dollar value:
 
 The `andThen` combinator is used purely for side-effecting purposes.
 It returns a new future with exactly the same result as the current
-future, irregardless of whether the current future failed or not.
+future, regardless of whether the current future failed or not.
 Once the current future is completed with the result, the closure
 corresponding to the `andThen` is invoked and then the new future is
 completed with the same result as this future. This ensures that
@@ -783,7 +783,7 @@ described so far and futures which are composed through monadic
 operations without side-effects is that these programs are
 deterministic. Deterministic here means that, given that no exception
 is thrown in the program, the result of the program (values observed
-in the futures) will always be the same, irregardless of the execution
+in the futures) will always be the same, regardless of the execution
 schedule of the parallel program.
 
 In some cases the client may want to complete the promise only if it
