Brings SIP-21 up-to-date as per discussion on scala-sips

--- a/sips/pending/_posts/2013-06-10-spores.md
+++ b/sips/pending/_posts/2013-06-10-spores.md
@@ -6,6 +6,10 @@ title: SIP-21 - Spores
 
 **By: Heather Miller, Martin Odersky, and Philipp Haller**
 
+<span class="label success">Updated September 15th, 2013</span>
+
+&nbsp;
+
 Functional programming languages are regularly touted as an enabling force, as
 an increasing number of applications become concurrent and distributed.
 However, managing closures in a concurrent or distributed environment, or
@@ -22,8 +26,8 @@ Potential hazards when using closures incorrectly:
 
 This SIP outlines an abstraction, called _spores_, which enables safer use of
 closures in concurrent and distributed environments. This is achieved by
-controlling the environment which a spore can capture. Using an _assignment-
-on-capture_ semantics, certain concurrency bugs due to capturing mutable
+controlling the environment which a spore can capture. Using an
+_assignment-on-capture_ semantics, certain concurrency bugs due to capturing mutable
 references can be avoided.
 
 ## Motivating Examples
@@ -86,6 +90,43 @@ The above example is not the only possible situation in which a closure can
 capture a reference to `this` or to an enclosing object in an unintended way.
 Thus, runtime errors when serializing closures are common.
 
+## Basic Usage
+
+Spores have a few modes of usage. The simplest form is:
+
+    val s = spore {
+      val h = helper
+      (x: Int) => {
+        val result = x + " " + h.toString
+        println("The result is: " + result)
+      }
+    }
+
+In this example, no transformation is actually performed. Instead, the
+compiler simply ensures that the spore is _well-formed_, i.e., anything that's
+captured is explicitly listed as a value definition before the spore's
+closure. This ensures that the enclosing `this` instance is not accidentally
+captured, in this example.
+
+Spores can also be used in for-comprehensions:
+
+    for { i <- collection
+          j <- doSomething(i)
+    } yield s"${capture(i)}: result: $j"
+
+Here, the fact that a spore is created is implicit, that is, the `spore`
+marker is not used explicitly. Spores come into play because the underlying
+`map` method of the type of `doSomething(i)` takes a spore as a parameter. The
+`capture(i)` syntax is an alternative way of declaring captured variables, in
+particular for use in for-comprehensions.
+
+Finally, a regular function literal can be used as a spore. That is, a method
+that expects a spore can be passed a function literal so long as the function
+literal is well-formed.
+
+    def sendOverWire(s: Spore[Int, Int]): Unit = ...
+    sendOverWire((x: Int) => x * x - 2)
+
 ## Design
 
 The main idea behind spores is to provide an alternative way to create
@@ -105,8 +146,8 @@ A spore is created as follows.
 
 The body of a spore consists of two parts:
 
-1. a sequence of local value (val) declarations only, and
-2. a closure.
+1. **the spore header:** a sequence of local value (val) declarations only, and
+2. **the closure**.
 
 In general, a `spore { ... }` expression has the following shape.
 
@@ -130,7 +171,8 @@ The closure of a spore has to satisfy the following rule. All free variables
 of the closure body have to be either
 
 1. parameters of the closure, or
-2. declared in the preceding sequence of local value declarations.
+2. declared in the preceding sequence of local value declarations, or
+3. marked using `capture` (see corresponding section  below).
 
 **Example 4:**
 
@@ -148,6 +190,32 @@ In the above example, the spore's closure is invalid, and would be rejected
 during compilation. The reason is that the variable `outer1` is neither a
 parameter of the closure nor one of the spore's value declarations (the only
 value declaration is: `val inner = outer2`).
+
+### Evaluation Semantics
+
+In order to make the runtime behavior of a spore as intuitive as possible, the
+design leaves the evaluation semantics unchanged compared to regular closures.
+Basically, leaving out the `spore` marker results in a closure with the same
+runtime behavior.
+
+For example,
+
+    spore {
+      val l = this.logger
+      () => new LoggingActor(l)
+    }
+
+and
+
+    {
+      val l = this.logger
+      () => new LoggingActor(l)
+    }
+
+have the same behavior at runtime. The rationale for this design decision is
+that the runtime behavior of closure-heavy code can already be hard to reason
+about. It would become even more difficult if we would introduce additional
+rules for spores.
 
 ### Spore Type
 
@@ -168,6 +236,124 @@ The `Spore` trait for spores of arity 1 is declared as follows:
 
 For each function arity there exists a corresponding `Spore` trait of the same
 arity (called `Spore2`, `Spore3`, etc.)
+
+### Implicit Conversion
+
+Regular function literals can be implicitly converted to spores. This implicit
+conversion has two benefits:
+
+1. it enables the use of spores in for-comprehensions.
+2. it makes the spore syntax more lightweight, which is important in frameworks such as [Spark](http://spark.incubator.apache.org/) where users often create many small function literals.
+
+This conversion is defined as a member of the `Spore` companion object, so
+it's always in the implicit scope when passing a function literal as a method
+argument when a `Spore` is expected. For example, one can do the following:
+
+    def sendOverWire(s: Spore[Int, Int]): Unit = ...
+    sendOverWire((x: Int) => x * x - 2)
+
+This is arguably much lighter-weight than having to declare a spore before
+passing it to `sendOverWire`.
+
+In general, the implicit conversion will be successful if and only if the
+function literal is well-formed according to the spore rules (defined above in
+the _Design_ section). Note that _only function literals can be converted to spores_.
+This is due to the fact that the body of the function literal has to be checked
+by the spore macro to make sure that the conversion is safe. For _named_ function
+values (i.e., not literals) on the other hand, it's not guaranteed that the
+function value's body is available for the spore macro to check.
+
+### Capture Syntax and For-Comprehensions
+
+To enable the use of spores with for-comprehensions, a `capture` syntax has
+been introduced to assist in the spore checking.
+
+To see why this is necessary, let's start with an example. Suppose we have a
+type for distributed collections:
+
+    trait DCollection[A] {
+      def map[B](sp: Spore[A, B]): DCollection[B]
+      def flatMap[B](sp: Spore[A, DCollection[B]]): DCollection[B]
+    }
+
+This type, `DCollection`, might be implemented in a way where the data is
+distributed across machines in a cluster. Thus, the functions passed to `map`,
+`flatMap`, etc. have to be serializable. A simple way to ensure this is to
+require these arguments to be spores. However, we also would like for-comprehensions
+like the following to work:
+
+    def lookup(i: Int): DCollection[Int] = ...
+    val indices: DCollection[Int] = ...
+
+    for { i <- indices
+          j <- lookup(i)
+    } yield j + i
+
+A problem here is that the desugaring done by the compiler for
+for-comprehensions doesn't know anything about spores. This is what
+the compiler produces from the above expression:
+
+    indices.flatMap(i => lookup(i).map(j => j + i))
+
+The problem is that `(j => j + i)` is not a spore. Furthermore, making it a
+spore is not straightforward, as we can't change the way for-comprehensions
+are translated.
+
+We can overcome this by using the implicit conversion introduced in the
+previous section to convert the function literal implicitly to a spore.
+
+However, in continuing to look at this example, it's evident that the lambda
+still has the wrong shape. The captured variable `i` is not declared in the
+spore header (the list of value definitions preceding the closure within the
+spore), like a spore demands.
+
+We can overcome this using the `capture` syntax – an alternative way of
+capturing paths. That is, instead of having to write:
+
+    {
+      val captured = i
+      j => j + i
+    }
+
+One can also write:
+
+    (j => j + capture(i))
+
+Thus, the above for-comprehension can be rewritten using spores and `capture`
+as follows:
+
+    for { i <- indices
+          j <- lookup(i)
+    } yield j + capture(i)
+
+Here, `i` is "captured" as it occurs syntactically after the arrow of another
+generator (it occurs after `j <- lookup(i)`, the second generator in the
+for-comprehension).
+
+**Note:** anything that is "captured" using `capture` may only be a path.
+
+**A path** (as defined by the Scala Language Specification, section 3.1) is:
+
+- The empty path &#949; (which cannot be written explicitly in user programs).
+- `C.this`, where `C` references a class.
+- `p.x` where `p` is a path and `x` is a stable member of `p`.
+- `C.super.x` or `C.super[M].x` where `C` references a class and `x` references a stable member of the super class or designated parent class `M` of `C`.
+
+The reason why captured expressions are restricted to paths is that otherwise
+the two closures
+
+    (x => <expr1> + capture(<expr2>))
+
+and
+
+    (x => <expr1> + <expr2>)
+
+(where `<expr1>` and `<expr2>` are not just paths) would not have the same
+runtime behavior, because in the first case, the closure would have to be
+transformed in a way that would evaluate `<expr2>` "outside of the closure".
+Not only would this complicate the reasoning about spore-based code (see the
+section Evaluation Semantics above), but it's not clear what "outside of the
+closure" even means in a context such as for-comprehensions.
 
 ### Macro Expansion
 
