small mixup in the doc fixed

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -85,10 +85,10 @@ We will explain the second import shortly.
 
 We then initialize a session variable which we will use to send
 requests to the server, using a hypothetical `createSessionFor`
-method that returns `List[Friend]`.
+method.
 To obtain the list of friends of a user, a request
 has to be sent over a network, which can take a long time.
-This is illustrated with the call to the method `getFriends`.
+This is illustrated with the call to the method `getFriends` that returns `List[Friend]`.
 To better utilize the CPU until the response arrives, we should not
 block the rest of the program-- this computation should be scheduled
 asynchronously. The `future` method does exactly that-- it performs
