import Success and Failure values near where they are used (needed for scala 2.10.3 at least)

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -177,6 +177,8 @@ fetch a list of our own recent posts and render them to the screen.
 We do so by calling a method `getRecentPosts` which returns
 a `List[String]`-- a list of recent textual posts:
 
+    import scala.util.{Success, Failure}
+
     val f: Future[List[String]] = future {
       session.getRecentPosts
     }
