fixed 'mapping' typo

--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -379,8 +379,8 @@ more straightforward composition. One of the basic combinators
 is `map`, which, given a future and a mapping function for the value of
 the future, produces a new future that is completed with the
 mapped value once the original future is successfully completed.
-You can reason about `map`ping futures in the same way you reason
-about `map`ping collections.
+You can reason about mapping futures in the same way you reason
+about mapping collections.
 
 Let's rewrite the previous example using the `map` combinator:
 
